# rust-api-stack

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  book.toml  deny.toml
crates/authorization/ras-authorization-core/: Cargo.toml  README.md
crates/authorization/ras-authorization-core/src/: audit.rs  auth_provider.rs  error.rs  issuer.rs  lib.rs  model.rs  router.rs  store.rs  verifier.rs
crates/authorization/ras-authorization-core/tests/: authority_tests.rs
crates/authorization/ras-authorization-gateway/: Cargo.toml  README.md
crates/authorization/ras-authorization-gateway/src/: config.rs  error.rs  gateway.rs  lib.rs  proxy.rs
crates/authorization/ras-authorization-gateway/tests/: gateway_tests.rs
crates/authorization/ras-authorization-token/: Cargo.toml  README.md
crates/authorization/ras-authorization-token/src/: claims.rs  error.rs  keyring.rs  keys.rs  lib.rs  validate.rs
crates/core/ras-auth-core/: Cargo.toml  README.md
crates/core/ras-auth-core/src/: authorize.rs  lib.rs  transport.rs
crates/core/ras-identity-core/: Cargo.toml  README.md
crates/core/ras-identity-core/src/: lib.rs
crates/core/ras-observability-core/: Cargo.toml  README.md
crates/core/ras-observability-core/src/: lib.rs  tests.rs
crates/core/ras-transport-core/: Cargo.toml  README.md
crates/core/ras-transport-core/src/: axum_test_transport.rs  error.rs  lib.rs  multipart.rs  request.rs  reqwest_transport.rs  response.rs
crates/core/ras-transport-core/tests/: multipart_framing.rs  multipart_streaming.rs  query_serialization.rs  request_response_units.rs  security_regression.rs  transport_in_process.rs
crates/core/ras-version-core/: Cargo.toml  README.md
crates/core/ras-version-core/src/: lib.rs
crates/identity/ras-identity-local/: Cargo.toml  README.md
crates/identity/ras-identity-local/src/: lib.rs
crates/identity/ras-identity-oauth2/: Cargo.toml  README.md
crates/identity/ras-identity-oauth2/examples/: google_oauth2.rs
crates/identity/ras-identity-oauth2/src/: client.rs  config.rs  error.rs  lib.rs  provider.rs  state.rs  tests.rs  types.rs
crates/identity/ras-identity-session/: Cargo.toml  README.md
crates/identity/ras-identity-session/src/: lib.rs
crates/integration/ras-integration-core/: Cargo.toml  README.md
crates/integration/ras-integration-core/src/: client.rs  config.rs  error.rs  grants.rs  lib.rs  manager.rs  secret.rs  testing.rs  types.rs
crates/integration/ras-integration-core/tests/: client_tests.rs  manager_tests.rs
crates/integration/ras-integration-oauth2/: Cargo.toml  README.md
crates/integration/ras-integration-oauth2/src/: config.rs  consent.rs  lib.rs  source.rs
crates/integration/ras-integration-oauth2/tests/: oauth2_tests.rs
crates/integration/ras-integration-ras/: Cargo.toml  README.md
crates/integration/ras-integration-ras/src/: lib.rs
crates/integration/ras-integration-ras/tests/: internal_source_tests.rs
crates/observability/ras-observability-otel/: Cargo.toml  README.md
crates/observability/ras-observability-otel/examples/: with_rest_service.rs
crates/observability/ras-observability-otel/src/: lib.rs  tests.rs
crates/observability/ras-observability-otel/tests/: integration.rs
crates/rest/ras-file-core/: Cargo.toml  README.md
crates/rest/ras-file-core/src/: lib.rs
crates/rest/ras-file-macro/: Cargo.toml  README.md
crates/rest/ras-file-macro/benches/: streaming.rs
crates/rest/ras-file-macro/examples/: simple.rs
crates/rest/ras-file-macro/src/: client.rs  lib.rs  openapi.rs  parser.rs  permissions.rs  server.rs
crates/rest/ras-file-macro/tests/: drain_test.rs  e2e.rs  integration.rs  minimal_test.rs  multiple_invocations.rs  paren_test.rs  simple_test.rs
crates/rest/ras-rest-core/: Cargo.toml  README.md
crates/rest/ras-rest-core/src/: lib.rs
crates/rest/ras-rest-macro/: Cargo.toml  README.md
crates/rest/ras-rest-macro/benches/: dispatch.rs
crates/rest/ras-rest-macro/src/: api_explorer_template.html  client.rs  lib.rs  openapi.rs  permissions.rs  static_hosting.rs
crates/rest/ras-rest-macro/tests/: e2e.rs  http_integration.rs  multiple_invocations.rs  path_param_encoding.rs  xss_protection_test.rs
crates/rpc/ras-jsonrpc-core/: Cargo.toml  README.md
crates/rpc/ras-jsonrpc-core/src/: lib.rs
crates/rpc/ras-jsonrpc-macro/: Cargo.toml  README.md
crates/rpc/ras-jsonrpc-macro/benches/: dispatch.rs
crates/rpc/ras-jsonrpc-macro/examples/: comprehensive_demo.rs  explorer_params_demo.rs  missing_handler_demo.rs  openrpc_demo.rs  usage.rs
crates/rpc/ras-jsonrpc-macro/src/: client.rs  lib.rs  openrpc.rs  permissions.rs  static_hosting.rs
crates/rpc/ras-jsonrpc-macro/tests/: e2e.rs  error_sanitization_test.rs  explorer_test.rs  explorer_token_storage_test.rs  http_integration.rs  http_status_codes_test.rs  integration.rs  missing_handler_test.rs  multiple_invocations.rs
crates/rpc/ras-jsonrpc-types/: Cargo.toml  README.md
crates/rpc/ras-jsonrpc-types/src/: lib.rs
crates/specs/openrpc-types/: Cargo.toml  README.md
crates/specs/openrpc-types/src/: components.rs  content_descriptor.rs  error_object.rs  example.rs  extensions.rs  external_docs.rs  info.rs  lib.rs  link.rs  method.rs  openrpc.rs  schema.rs  server.rs  tag.rs
crates/specs/ras-openrpc-types/: Cargo.toml  README.md
crates/specs/ras-openrpc-types/examples/: basic_usage.rs
crates/specs/ras-openrpc-types/src/: error.rs  error_object.rs  extensions.rs  info.rs  lib.rs  method.rs  reference.rs  schema.rs  server.rs  validation.rs
crates/specs/ras-permission-manifest/: Cargo.toml  README.md
crates/topology/ras-topology-core/: Cargo.toml  README.md
examples/: README.md
examples/authorization-demo/: Cargo.toml  README.md
examples/authorization-demo/src/: lib.rs  main.rs
examples/authorization-demo/tests/: e2e.rs
examples/file-service-example/: Cargo.toml  README.md
examples/file-service-example/src/: main.rs
examples/wasm-ui-demo/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js  vite.config.js
examples/wasm-ui-demo/src/: lib.rs
(+152 files in other folders)
