[workspace]
members = [
    "crates/core/*",
    "crates/identity/*",
    "crates/observability/*",
    "crates/rest/*",
    "crates/rpc/bidirectional/*",
    "crates/rpc/ras-jsonrpc-core",
    "crates/rpc/ras-jsonrpc-macro",
    "crates/rpc/ras-jsonrpc-types",
    "crates/specs/*",
    "crates/test-utils/*",
    "crates/tools/*",
    "examples/basic-jsonrpc/*",
    "examples/bidirectional-chat/api",
    "examples/bidirectional-chat/server",
    "examples/bidirectional-chat/tui",
    "examples/file-service-example",
    "examples/file-service-wasm/file-service-api",
    "examples/file-service-wasm/file-service-backend",
    "examples/oauth2-demo/*",
    "examples/rest-wasm-example/rest-api",
    "examples/rest-wasm-example/rest-backend",
    "examples/wasm-ui-demo",
    "tests/playwright/fixtures/*",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum-extra = { version = "0.10", features = ["query"] }
base64 = "0.22"
bon = "3.2"
console = "0.15"
console_error_panic_hook = "0.1"
criterion = "0.5"
crossterm = "0.28"
dashmap = "6.1"
dialoguer = "0.11"
dominator = "0.5"
dotenvy = "0.15"
dwind = "0.3.2"
dwind-macros = "0.2.2"
dwui = "0.4.0"
futures = "0.3"
futures-signals = "0.3"
futures-signals-component-macro = "0.4.0"
futures-util = "0.3"
gloo-events = "0.2"
gloo-net = "0.6"
gloo-utils = "0.2"
http = "1.0"
js-sys = "0.3"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
mime_guess = "2.0"
once_cell = "1.20"
opentelemetry = "0.28"
opentelemetry-prometheus = "0.28"
proc-macro2 = "1.0"
prometheus = "0.13"
quote = "1.0"
rand = "0.8"
ratatui = "0.29"
rust-embed = "8.0"
schemars = "1.0.0-alpha.20"
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.13"
thiserror = "2.0"
tokio-test = "0.4"
tokio-tungstenite = "0.26"
toml = "0.8"
tower-http = "0.6"
tracing = "0.1"
url = "2.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
wee_alloc = "0.4"
wiremock = "0.6"

[workspace.dependencies.argon2]
version = "0.5"
features = ["std"]

[workspace.dependencies.axum]
version = "0.8"
features = ["multipart"]

[workspace.dependencies.axum-test]
version = "18.0.0-rc3"

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[workspace.dependencies.clap]
version = "4.5.39"
features = ["derive"]

[workspace.dependencies.config]
version = "0.14"
features = ["toml"]

[workspace.dependencies.gloo-timers]
version = "0.3"
features = ["futures"]

[workspace.dependencies.hyper]
version = "1.0"
features = ["full"]

[workspace.dependencies.opentelemetry_sdk]
version = "0.28"
features = ["rt-tokio", "metrics"]

[workspace.dependencies.rand_core]
version = "0.6"
features = ["std"]

[workspace.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "multipart", "stream", "rustls-tls", "http2", "charset"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.syn]
version = "2.0"
features = ["full", "extra-traits"]

[workspace.dependencies.tokio]
version = "1.0"
features = ["full"]

[workspace.dependencies.tokio-util]
version = "0.7"
features = ["io"]

[workspace.dependencies.tower]
version = "0.5"
features = ["util"]

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[workspace.dependencies.uuid]
version = "1.11"
features = ["v4", "serde"]
