[workspace]
members = [
    "crates/authorization/*",
    "crates/core/*",
    "crates/identity/*",
    "crates/observability/*",
    "crates/rest/*",
    "crates/rpc/bidirectional/*",
    "crates/rpc/ras-jsonrpc-core",
    "crates/rpc/ras-jsonrpc-macro",
    "crates/rpc/ras-jsonrpc-types",
    "crates/specs/*",
    "examples/basic-jsonrpc/*",
    "examples/bidirectional-chat/api",
    "examples/bidirectional-chat/server",
    "examples/bidirectional-chat/tui",
    "examples/file-service-example",
    "examples/file-service-wasm/file-service-api",
    "examples/file-service-wasm/file-service-backend",
    "examples/oauth2-demo/*",
    "examples/rest-wasm-example/rest-api",
    "examples/rest-wasm-example/rest-backend",
    "examples/wasm-ui-demo",
    "tests/playwright/fixtures/*",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum-extra = { version = "0.10", features = ["query"] }
base64 = "0.22"
bytes = "1.0"
bon = "3.2"
console_error_panic_hook = "0.1"
criterion = "0.5"
cookie = "0.18"
crossterm = "0.28"
dashmap = "6.1"
dominator = "0.5"
dotenvy = "0.15"
dwind = "0.3.2"
dwind-macros = "0.2.2"
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8", "pem"] }
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
futures-signals = "0.3"
http = "1.0"
hmac = "0.12"
js-sys = "0.3"
mime_guess = "2.0"
once_cell = "1.20"
opentelemetry = "0.32"
p256 = { version = "0.13", features = ["pkcs8"] }
opentelemetry-prometheus = "0.32"
proc-macro2 = "1.0"
prometheus = "0.14"
quote = "1.0"
rand = "0.8"
ratatui = "0.29"
schemars = "1.0.0-alpha.20"
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.10"
tempfile = "3.13"
thiserror = "2.0"
tokio-tungstenite = "0.26"
tower-http = "0.6"
tracing = "0.1"
url = "2.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[workspace.dependencies.argon2]
version = "0.5"
features = ["std"]

[workspace.dependencies.axum]
version = "0.8"
features = ["multipart"]

[workspace.dependencies.axum-test]
version = "18.7.0"

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[workspace.dependencies.config]
version = "0.14"
features = ["toml"]

[workspace.dependencies.opentelemetry_sdk]
version = "0.32"
features = ["rt-tokio", "metrics"]

[workspace.dependencies.rand_core]
version = "0.6"
features = ["std"]

[workspace.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "multipart", "stream", "rustls-tls", "http2", "charset"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.syn]
version = "2.0"
features = ["full", "extra-traits"]

[workspace.dependencies.tokio]
version = "1.0"
features = ["full"]

[workspace.dependencies.tokio-util]
version = "0.7"
features = ["io"]

[workspace.dependencies.tower]
version = "0.5"
features = ["util"]

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[workspace.dependencies.uuid]
version = "1.11"
features = ["v4", "serde"]
