[package]
name = "file-service-example"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Runnable file upload and download service example for Rust Agent Stack"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-api-stack"
homepage = "https://github.com/JedimEmO/rust-api-stack"
publish = false
readme = "README.md"

[features]
default = ["server"]
server = ["ras-file-macro/server"]
client = ["ras-file-macro/client"]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ras-file-macro = { path = "../../crates/rest/ras-file-macro", version = "0.1.0", default-features = false }
ras-file-core = { path = "../../crates/rest/ras-file-core", version = "0.1.0" }
ras-auth-core = { path = "../../crates/core/ras-auth-core", version = "0.1.0" }
ras-permission-manifest = { path = "../../crates/specs/ras-permission-manifest", version = "0.1.0" }
thiserror = { workspace = true }
async-trait = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
reqwest = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
