[package]
name = "wasm-ui-demo"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Dominator WASM UI demo using the generated Rust Agent Stack JSON-RPC client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-agent-stack"
homepage = "https://github.com/JedimEmO/rust-agent-stack"
publish = false
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
basic-jsonrpc-api = { path = "../basic-jsonrpc/api", version = "0.1.0", default-features = false, features = ["client"] }

dominator = { workspace = true }
dwind = { workspace = true }
dwind-macros = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
futures-signals = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
once_cell = { workspace = true }
