[package]
name = "ras-authorization-gateway"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Optional RAS auth gateway: validates web sessions locally, narrows permissions to the target audience, and forwards short-lived single-audience tokens to backend services"
keywords = ["api", "auth", "gateway", "proxy", "tokens"]
categories = ["authentication", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-api-stack"
homepage = "https://github.com/JedimEmO/rust-api-stack"
readme = "README.md"

[dependencies]
ras-authorization-token = { path = "../ras-authorization-token", version = "0.1.0" }
ras-transport-core = { path = "../../core/ras-transport-core", version = "0.1.0" }

axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
cookie = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
axum-test = { workspace = true }
futures = { workspace = true }
