[package]
name = "ras-auth-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Core authentication and authorization traits for Rust Agent Stack services"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-api-stack"
homepage = "https://github.com/JedimEmO/rust-api-stack"
readme = "README.md"

[dependencies]
cookie = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
