[package]
name = "ras-identity-core"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "Core traits and types for identity management and authentication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-agent-stack"
homepage = "https://github.com/JedimEmO/rust-agent-stack"
readme = "README.md"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
