[package]
name = "ras-version-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Core traits for versioned API migrations in Rust Agent Stack"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-agent-stack"
homepage = "https://github.com/JedimEmO/rust-agent-stack"
readme = "README.md"

[dependencies]
