[package]
name = "ras-identity-oauth2"
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
description = "OAuth2 authentication provider with Google support, PKCE, and state management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-agent-stack"
homepage = "https://github.com/JedimEmO/rust-agent-stack"
readme = "README.md"

[dependencies]
ras-identity-core = { path = "../../core/ras-identity-core", version = "0.1.1" }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }

# OAuth2 specific dependencies
reqwest = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
url = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
tracing-subscriber = { workspace = true }

# For the example
ras-identity-session = { path = "../ras-identity-session", version = "0.1.1" }
