[package]
name = "ras-integration-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Outbound token framework for RAS services: TokenSource abstraction, token manager with caching, grant stores, and capability-scoped HTTP clients"
keywords = ["api", "auth", "oauth2", "tokens", "integrations"]
categories = ["authentication", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-api-stack"
homepage = "https://github.com/JedimEmO/rust-api-stack"
readme = "README.md"

[dependencies]
ras-transport-core = { path = "../../core/ras-transport-core", version = "0.1.0" }

async-trait = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
futures = { workspace = true }
