[package]
name = "ras-observability-otel"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "OpenTelemetry implementation for Rust Agent Stack observability"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-api-stack"
homepage = "https://github.com/JedimEmO/rust-api-stack"
readme = "README.md"

[dependencies]
ras-observability-core = { path = "../../core/ras-observability-core", version = "0.1.0" }
ras-auth-core = { path = "../../core/ras-auth-core", version = "0.1.0" }

# OpenTelemetry dependencies
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }

# Web framework and utilities
axum = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
axum-test = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[example]]
name = "simple_usage"
path = "examples/simple_usage.rs"

[[example]]
name = "with_rest_service"
path = "examples/with_rest_service.rs"
