[package]
name = "ras-file-macro"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Procedural macro for type-safe file upload and download APIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-api-stack"
homepage = "https://github.com/JedimEmO/rust-api-stack"
readme = "README.md"

[lib]
proc-macro = true

[features]
default = ["server", "client"]
server = []
client = []

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits", "visit-mut"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ras-auth-core = { path = "../../core/ras-auth-core", version = "0.1.0" }
ras-file-core = { path = "../ras-file-core", version = "0.1.0" }
thiserror = { workspace = true }
async-trait = { workspace = true }
axum-test = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "streaming"
harness = false
