[package]
name = "ras-file-macro"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Procedural macro for type-safe file upload and download APIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-api-stack"
homepage = "https://github.com/JedimEmO/rust-api-stack"
readme = "README.md"

[lib]
proc-macro = true

[features]
default = ["server", "client"]
server = []
client = ["ras-transport-core/reqwest"]
# Enables generated streaming file-upload helpers (native only). Consumers that
# turn this on must also depend on `tokio`, `tokio-util`, and `futures-util`.
fs = ["ras-transport-core/fs"]
permissions = []

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits", "visit-mut"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }
# Proc-macro crates can't re-export runtime deps, but the `client` feature must
# activate `ras-transport-core/reqwest` so the default `ReqwestTransport` is
# available to consumers. Consumers must depend on `ras-transport-core` too.
ras-transport-core = { path = "../../core/ras-transport-core", version = "0.1.0", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ras-auth-core = { path = "../../core/ras-auth-core", version = "0.1.0" }
ras-file-core = { path = "../ras-file-core", version = "0.1.0" }
ras-permission-manifest = { path = "../../specs/ras-permission-manifest", version = "0.1.0" }
# Generated-client tests drive the client over the in-process AxumTestTransport,
# and the default `build()` path needs the reqwest transport to compile.
ras-transport-core = { path = "../../core/ras-transport-core", version = "0.1.0", features = ["reqwest", "axum-test", "fs"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
axum-test = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "streaming"
harness = false
