[package]
name = "ras-rest-core"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "Core types and traits for REST services in Rust Agent Stack"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-api-stack"
homepage = "https://github.com/JedimEmO/rust-api-stack"
readme = "README.md"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
ras-auth-core = { path = "../../core/ras-auth-core", version = "0.1.0" }
ras-version-core = { path = "../../core/ras-version-core", version = "0.1.0" }
