[package]
name = "ras-rest-macro"
version = "0.2.1"
edition = "2024"
rust-version = "1.88"
description = "Procedural macro for type-safe REST APIs with auth integration and OpenAPI document generation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-api-stack"
homepage = "https://github.com/JedimEmO/rust-api-stack"
readme = "README.md"

[lib]
proc-macro = true

[features]
default = ["server", "client"]  # Enable server by default for backward compatibility
server = ["axum", "ras-auth-core", "ras-rest-core", "async-trait"]
client = ["ras-transport-core/reqwest"]
permissions = []

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }

# Server dependencies
axum = { workspace = true, optional = true }
ras-auth-core = { path = "../../core/ras-auth-core", version = "0.1.0", optional = true }
ras-rest-core = { path = "../ras-rest-core", version = "0.1.1", optional = true }
async-trait = { workspace = true, optional = true }

# Client dependencies
ras-transport-core = { path = "../../core/ras-transport-core", version = "0.1.0", optional = true }

[dev-dependencies]
tokio = { workspace = true }
ras-transport-core = { path = "../../core/ras-transport-core", version = "0.1.0", features = ["axum-test"] }
tower = { workspace = true }
rand = { workspace = true }
ras-identity-session = { path = "../../identity/ras-identity-session", version = "0.2.0" }
ras-jsonrpc-core = { path = "../../rpc/ras-jsonrpc-core", version = "0.1.2" }
futures = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
# Server dependencies for tests
axum = { workspace = true }
axum-extra = { workspace = true }
ras-auth-core = { path = "../../core/ras-auth-core", version = "0.1.0" }
ras-rest-core = { path = "../ras-rest-core", version = "0.1.1" }
ras-permission-manifest = { path = "../../specs/ras-permission-manifest", version = "0.1.0" }
axum-test = { workspace = true }
schemars = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "dispatch"
harness = false
